tests/conformance/fail/borrow/double_mut_borrow.ny
fn main() {
    let mut n = 1
    let r1 = &mut n
    let r2 = &mut n
    print(r1)
    print(r2)
}
